--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
-title: Diseñadora Industrial Universidad de Chile.
-logo: logo.svg # You can add own logo.
+title: Cecilia Loyola
+logo: LOGO_CL.svg # You can add own logo.
 description: website personal Cecilia Loyola Jimenez
 
 
@@ -10,8 +10,8 @@ description: website personal Cecilia Loyola Jimenez
 author:
   name: Cecilia Loyola Jimenez
   image: 01.jpg
-  say-hello: Hello, I’m <strong>Alex Rodriguez</strong>
-  bio: Designs, talks, and writes about <strong>web</strong>, <strong>ethics</strong>, <strong>privacy</strong>, and dev. I share design tutorials, free resources and inspiration. Loves <a href="#">music</a> & riding his bicycle.
+  say-hello: Hola, soy <strong>Cecilia Loyola</strong>
+  bio: <strong> Diseñadora industrial y UX.</strong>
 
 
 #-------------------------------
@@ -25,7 +25,7 @@ pinterest: https://pinterest.com/ # Add your Pinterest handle
 
 #-------------------------------
 # Comment Section (Disqus)
-disqus-identifier: mr-brown # add your shortname for Disqus Comment. For example mr-brown
+disqus-identifier: CeciliaLJ # add your shortname for Disqus Comment. For example mr-brown
 
 
 #-------------------------------
