--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -1,7 +1,7 @@
 #-------------------------------
 # General Site Settings
 title: Cecilia Loyola
-logo: LOGO_CL.svg # You can add own logo.
+logo: logo.png # You can add own logo.
 description: website personal Cecilia Loyola Jimenez
 
 
@@ -18,10 +18,10 @@ author:
 # Contact links
 twitter: https://twitter.com/ # Add your Twitter handle
 facebook: https://facebook.com/ # Add your Facebook handle
-dribbble: https://dribbble.com/ # Add your Dribbble handle
-instagram: https://instagram.com/ # Add your Instagram handle
+# dribbble: https://dribbble.com/ # Add your Dribbble handle
+instagram: https://instagram.com/ceci.en.3d # Add your Instagram handle
 pinterest: https://pinterest.com/ # Add your Pinterest handle
-
+linkedin: https://www.linkedin.com/in/cecilia-loyola-jimenez-856259165/
 
 #-------------------------------
 # Comment Section (Disqus)
@@ -31,7 +31,7 @@ disqus-identifier: CeciliaLJ # add your shortname for Disqus Comment. For exampl
 #-------------------------------
 # Instagram Feed
 instafeed: # To enable the instafeed, use the value true. To turn off use the value false.
-instagram-profile: artemsheludko_ # Add instagram username
+instagram-profile: ceci.en.3d # Add instagram username
 
 
 #-------------------------------
